--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,14 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "pwa-chrome",
+      "request": "launch",
+      "name": "Launch Chrome against localhost",
+      "url": "http://localhost:8000",
+      "webRoot": "${workspaceFolder}"
+  },
+
+    {
       "name": "ng serve",
       "type": "pwa-chrome",
       "request": "launch",
